#============================================================================
# List the subdirectories to build...
#============================================================================
ADD_SUBDIRECTORY(genRosCppTemplate)
ADD_SUBDIRECTORY(genRosPyTemplate)
##############################################################################
#                           END of CMakeLists.txt
##############################################################################

