#--------------------------------------------------------
# The CMakeLists.txt for:                 createroscpptemplate.cpp
# Author(s):                              CTHung
#--------------------------------------------------------

SET(SRC
    createRosCppTemplate.cpp
)

ADD_EXECUTABLE(createRosCppTemplate ${SRC})

TARGET_LINK_LIBRARIES(createRosCppTemplate
    )
