#--------------------------------------------------------
# The CMakeLists.txt for:                 createrospytemplate.cpp
# Author(s):                              CTHung
#--------------------------------------------------------

SET(SRC
    createRosPyTemplate.cpp
)

ADD_EXECUTABLE(createRosPyTemplate ${SRC})

TARGET_LINK_LIBRARIES(createRosPyTemplate
    )
